<resources>
    <string name="NUMBER_PLACEHOLDER">0</string>
    <string name="DATE_PLACEHOLDER">DD/MM/YYYY</string>
    <string name="DIALOG_YES">Yes</string>
    <string name="DIALOG_NO">No</string>

    <string name="APP_NAME">crimson</string>

    <string name="QUOTE">Quote</string>
    <string name="QUOTES">Quotes</string>
    <string name="QUOTE_MARKED_TEXT">\"%1$s\"</string>
    <string name="FAVORITE_QUOTES">Favorite Quotes</string>
    <string name="QUOTES_PER_BOOK">Quotes / Book</string>
    <string name="REMOVE_QUOTE">Removing Quote</string>

    <string name="BOOK">Book</string>
    <string name="CLICK_BOOK">Click to select book</string>
    <string name="BOOKS">Books</string>
    <string name="FAVORITE_BOOKS">Favorite Books</string>
    <string name="REMOVE_BOOK">Removing Book</string>

    <string name="STATISTICS">Statistics</string>
    <string name="IMPORT_LIBRARY">Import Library</string>
    <string name="EXPORT_LIBRARY">Export Library</string>
    <string name="RESET_LIBRARY">Reset Library</string>
    <string name="EXPORT_LIBRARY_SUCCESS">Library was successfully exported</string>
    <string name="IMPORT_LIBRARY_SUCCESS">Library was successfully imported</string>
    <string name="IMPORT_LIBRARY_DIALOG_TITLE">Importing library</string>
    <string name="IMPORT_LIBRARY_MESSAGE">Importing a library will not remove your actual books,
        but will append new books and quotes to your collection.
        Are you sure you want to continue the import process?</string>

    <string name="TITLE">Title</string>
    <string name="AUTHOR">Author</string>
    <string name="FINISHED">Finished?</string>
    <string name="SAVE">Save</string>
    <string name="REMOVE">Remove</string>
    <string name="SEARCH">Search</string>
    <string name="SEARCH_COVER">Search for a cover</string>
    <string name="ADDED_AT">Added at</string>
    <string name="SELECT">Update</string>

    <string name="CAMERA_PERMISSION_MESSAGE">Camera permission is required</string>
    <string name="YOU_AWESOME_EASTER_EGG">You\'re awesome!</string>
    <string name="INSERT_QUOTE_MESSAGE">Write down a quote that inspired you or capture it using your camera</string>
    <string name="REMOVE_QUOTE_MESSAGE">Are you sure you want to remove this quote?</string>
    <string name="REMOVE_BOOK_MESSAGE">Are you sure you want to remove this book?
        Its quotes will also be removed</string>
    <string name="RESET_LIBRARY_MESSAGE">Are you sure you want to reset your library?
    Be aware that the action cannot be undone</string>
    <string name="RESET_LIBRARY_CONFIRMATION">Are you really sure?</string>

    <string name="ERROR_TITLE_EMPTY">Title cannot be empty</string>
    <string name="ERROR_AUTHOR_EMPTY">Author cannot be empty</string>
    <string name="ERROR_COVER_IMAGE_EMPTY">Cover image cannot be empty</string>
    <string name="ERROR_QUERY_EMPTY">Search query cannot be empty</string>
    <string name="ERROR_CONNECTION">Error occurred during connection</string>
    <string name="ERROR_QUOTE_EMPTY">Quote text cannot be empty</string>
    <string name="ERROR_BOOK_EMPTY">You should select a book first!</string>
    <string name="ERROR_NO_TEXT_DETECTED">No text detected - Please try again</string>
    <string name="ERROR_PHOTO_PROCESSING">Error occurred during photo processing</string>
    <string name="ERROR_EXPORT_FILE">Error occurred during library export. Please try again.</string>
    <string name="ERROR_IMPORT_FILE">Error occurred during library import. File may be corrupted.</string>

    <string name="EMPTY_QUOTES_CONTENT_DESCRIPTION">No quotes saved</string>
    <string name="EMPTY_BOOKS_CONTENT_DESCRIPTION">No books saved</string>
    <string name="ADD_QUOTES_CONTENT_DESCRIPTION">Add quotes</string>
    <string name="SEARCH_BOOKS_DESCRIPTION">Search for books online</string>
    <string name="NO_BOOKS_FOUND">No books were found</string>

</resources>
