<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/fragment_statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/STATISTICS"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/fragment_statistics_profile_picture"
        android:layout_width="158dp"
        android:layout_height="151dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/ic_launcher"
        app:civ_border_color="@color/primaryPurple"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/primaryPurple"
        app:civ_shadow_radius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_title" />

    <TextView
        android:id="@+id/fragment_statistics_quotes_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/QUOTES"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_statistics_quotes_rate_label"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

    <TextView
        android:id="@+id/fragment_statistics_quotes_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NUMBER_PLACEHOLDER"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_statistics_quotes_rate"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_quotes_no_label" />

    <TextView
        android:id="@+id/fragment_statistics_books_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/BOOKS"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

    <TextView
        android:id="@+id/fragment_statistics_books_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NUMBER_PLACEHOLDER"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toEndOf="@+id/fragment_statistics_quotes_rate"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_books_no_label" />

    <TextView
        android:id="@+id/fragment_statistics_quotes_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/QUOTES_PER_BOOK"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

    <TextView
        android:id="@+id/fragment_statistics_quotes_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/NUMBER_PLACEHOLDER"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_quotes_rate_label" />

    <Button
        android:id="@+id/fragment_statistics_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="184dp"
        android:text="@string/IMPORT_LIBRARY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

    <Button
        android:id="@+id/fragment_statistics_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="184dp"
        android:text="@string/EXPORT_LIBRARY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_statistics_import"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

    <Button
        android:id="@+id/fragment_statistics_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/RESET_LIBRARY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_statistics_profile_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>