<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.books.BookDetailFragment">

    <ImageView
        android:id="@+id/fragment_book_detail_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/BOOK"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover_add_sample" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_book_detail_title"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_book_detail_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TITLE" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_book_detail_author"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_book_detail_author_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AUTHOR" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/fragment_book_detail_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/FINISHED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_author" />

    <ListView
        android:id="@+id/fragment_book_detail_quotes"
        android:layout_width="382dp"
        android:layout_height="99dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_finished" />

    <Button
        android:id="@+id/fragment_book_detail_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:text="@string/SAVE"
        app:layout_constraintEnd_toStartOf="@+id/fragment_book_detail_remove_button"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_quotes" />

    <Button
        android:id="@+id/fragment_book_detail_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:text="@string/REMOVE"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_book_detail_quotes" />

</androidx.constraintlayout.widget.ConstraintLayout>