<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.books.CoverFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_cover_search_input"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_cover_search_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SEARCH_COVER"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_cover_search_button"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/SEARCH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cover_search_input" />

    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
        android:id="@+id/fragment_cover_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cover_search_button"
        app:layout_constraintVertical_bias="0.054"
        app:shimmer_demo_angle="20"
        app:shimmer_demo_child_count="12"
        app:shimmer_demo_grid_child_count="3"
        app:shimmer_demo_layout="@layout/shimmer_adapter_books"
        app:shimmer_demo_layout_manager_type="grid" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_cover_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:columnWidth="120dp"
        android:drawSelectorOnTop="true"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:paddingBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cover_search_button"
        app:layout_constraintVertical_bias="0.054" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_cover_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_camera"
        app:backgroundTint="@color/primaryPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/fragment_cover_search_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/SEARCH_BOOKS_DESCRIPTION"
        android:src="@drawable/search_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_cover_no_books_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/NO_BOOKS_FOUND"
        android:src="@drawable/no_books_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>