<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_quotes">

    <fragment
        android:id="@+id/navigation_quotes"
        android:name="com.axbg.crimson.ui.quotes.QuotesFragment"
        android:label="@string/QUOTES"
        tools:layout="@layout/fragment_quotes">
        <action
            android:id="@+id/create_quote_action"
            app:destination="@id/quoteDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.axbg.crimson.ui.books.BooksFragment"
        android:label="@string/BOOKS"
        tools:layout="@layout/fragment_books">
        <action
            android:id="@+id/create_book_action"
            app:destination="@id/books_detail"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.axbg.crimson.ui.statistics.StatisticsFragment"
        android:label="@string/STATISTICS"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/books_detail"
        android:name="com.axbg.crimson.ui.books.BookDetailFragment"
        android:label="books_detail"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="create"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="bookId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/add_cover_action"
            app:destination="@id/cover"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/view_book_quote_action"
            app:destination="@id/quoteDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
        android:id="@+id/cover"
        android:name="com.axbg.crimson.ui.books.CoverFragment"
        android:label="fragment_cover"
        tools:layout="@layout/fragment_cover" />
    <fragment
        android:id="@+id/quoteDetailFragment"
        android:name="com.axbg.crimson.ui.quotes.QuoteDetailFragment"
        android:label="QuoteDetailFragment">
        <argument
            android:name="create"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="quoteId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="bookTitle"
            android:defaultValue='""'
            app:argType="string" />
        <action
            android:id="@+id/select_book_action"
            app:destination="@id/bookSelectionFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
        android:id="@+id/bookSelectionFragment"
        android:name="com.axbg.crimson.ui.books.BookSelectionFragment"
        android:label="fragment_book_selection"
        tools:layout="@layout/fragment_book_selection" />
</navigation>
